# taubatron

./: .bzrignore  .gitignore  README  README.branch  about.html  configure.ac  connect-to-socket.scm  nginx.conf  taubatron.cgi  taubatron.scm  toy-server.scm  tt-env  tt-manager  tt-server
cgi-trampoline/: Makefile  print-env  send-post.scm  start-thttpd  taubatron  taubatron.css  test-page.html  trampoline.c  trampoline.scm  tweet.js
dictionary-sources/: get-words.scm
dictionary-sources/charles-dickens/: all-words.txt  david-copperfield.txt  great-expectations.txt
src/: Makefile.am  alice-dict.c  connection.c  connection.h  dickens-dict.c  dictionary.c  dictionary.h  en-dict.c  mie-dict.c  rule.c  rule.h  taubatron.scm  wordpath.c
utils/: get-words.scm
