
bin_PROGRAMS=wordpath

AM_CPPFLAGS=@GLIB_CFLAGS@ @IGRAPH_CFLAGS@
AM_LDFLAGS=@GLIB_LIBS@ @IGRAPH_LIBS@

wordpath_SOURCES=dictionary.c dictionary.h \
                 rule.c rule.h \
                 wordpath.c \
                 mie-dict.c \
                 en-dict.c \
                 connection.c connection.h
