
bin_PROGRAMS=taubatron

AM_CPPFLAGS=@GLIB_CFLAGS@ @IGRAPH_CFLAGS@
AM_LDFLAGS=@GLIB_LIBS@ @IGRAPH_LIBS@

taubatron_SOURCES=dictionary.c dictionary.h \
                  rule.c rule.h \
                  wordpath.c \
                  mie-dict.c \
	          alice-dict.c \
                  en-dict.c \
                  dickens-dict.c

