
lib_LTLIBRARIES=libtaubatron.la

AM_CPPFLAGS=@GLIB_CFLAGS@ @IGRAPH_CFLAGS@
AM_LDFLAGS=@GLIB_LIBS@ @IGRAPH_LIBS@

libtaubatron_la_SOURCES=dictionary.c dictionary.h \
                  rule.c rule.h \
                  wordpath.c \
                  mie-dict.c \
	          alice-dict.c \
                  en-dict.c \
                  dickens-dict.c

